...

	if (detail.tvDetail != null) {
		setTitle(detail.tvDetail.title ?: "")
		LazyColumn(
			modifier
				.fillMaxSize()
				.testTag("Tv Detail Column")
		) {
			item {
				Image(
					painter = rememberAsyncImagePainter(BASE_IMAGE_PATH + detail.tvDetail.backdropPath),
					contentDescription = "",
					modifier = Modifier
...
						}

						Button(
							modifier = Modifier
								.fillMaxWidth()
								.padding(horizontal = 16.dp)
								.testTag("Favorite Button"),
							enabled = !detail.isFavoriteInProgress,
							onClick = viewModel::toggleFavorite,
						) {
							Icon(imageVector = favoriteIcon, contentDescription = null)
							Spacer(modifier = Modifier.width(8.dp))
							Text(text = favoriteLabel)
...
